# HMMLab

./: .gitignore  README.md  audit.md  experiment_design.md  pyproject.toml
configs/: logging.yaml  paths.yaml  subject_labels.csv
configs/experiments/: data_config.yaml  feat_task_k3_diag_pca90.yaml  feat_task_k3_diag_pca90_bandsonly.yaml  feat_task_k3_diag_pca90_hjorthonly.yaml  feat_task_k3_diag_pca90_hjorthonly_temporalqc.yaml  feat_task_k3_full_pca90_hjorthonly_temporalqc.yaml  feat_task_k4_diag_pca90.yaml  feat_task_k5_diag_pca90.yaml
configs/features/: feature_hmm.yaml  task_mega_vector.yaml
configs/preprocessing/: rest_ae.yaml  rest_feature.yaml  rest_tde.yaml  task_ae.yaml  task_feature_hmm.yaml  task_tde.yaml
notebooks/exploratory/: 01_task_signal_exploration.ipynb  absorbing_subjects_qc.ipynb  comparative_analysis.ipynb  deep_analysis.ipynb  deep_analysis_v2.ipynb  subject_labeling.ipynb  tde_analysis.ipynb  tde_master_report.ipynb
notebooks/pipelines/: 00_data_discovery.ipynb  01_preprocessing_task.ipynb  02_feature_extraction.ipynb  03_pca.ipynb
notebooks/reports/: 04_interpretation_k3.ipynb  05_state_visualization_k3.ipynb  06_clinical_statistics_k3.ipynb  Kn_model_comparison.ipynb  baseline_state_debug.ipynb  clinical_statistics_k3_bandsonly.ipynb  clinical_statistics_k3_full_hjorthonly_temporalqc.ipynb  clinical_statistics_k3_hjorthonly.ipynb  clinical_statistics_k3_hjorthonly_temporalqc.ipynb  clinical_statistics_k4.ipynb  debug.ipynb  (+7 more)
orchestration/: __init__.py  cli.py  registry.py  runner.py  tracker.py
scripts/: _verify_determinism.py
(+79 files in other folders)
