[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-orchestrator"
version = "0.1.0"
description = "Orquestador mínimo para el pipeline EEG-HMM"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
hmm = "orchestration.cli:main"

[tool.setuptools.packages.find]
include = ["orchestration*"]